RabbitMQ/Scripts/producer-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: producer-nodeport
spec:
  type: NodePort
  selector:
    app.kubernetes.io/instance: producer # label of the pod
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30071
