RabbitMQ/Scripts/rabbitmq-amqp-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-amqp-nodeport
spec:
  type: NodePort
  selector:
    app.kubernetes.io/instance: rabbitmq # label of the pod
  ports:
    - name: amqp
      protocol: TCP
      port: 5672
      targetPort: 5672
      nodePort: 30011
