RabbitMQ/Scripts/rabbitmq-ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: rabbitmq-ui-ingress
spec:
  rules:
    - host:
      http:
        paths:
          - path: /rabbitmq(/|$)(.*)
            pathType: Exact
            backend:
              service:
                name: rabbitmq
                port: 
                  number: 15672
